<resources>
    <string name="app_name">Wash MyCar</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wash MyCar</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">Account</string>
    <string name="menu_map">Service Providers</string>
    <string name="menu_myOrders">My Orders</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_option_fragment">Hello option fragment</string>
    <string name="no_orders_yet">No Orders Yet!</string>
</resources>
