<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_local_car_wash_black_24dp"
            android:title="@string/menu_myOrders" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout"
            />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/menu_contact" />
        </menu>
    </item>

</menu>
